bugfix(login): align login/signup button text to the right

--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -88,9 +88,8 @@
 .right form input[type="submit"] {
   padding: 0.75rem;
   font-weight: bold;
-  display: flex;
-  justify-content: flex-end;
   padding-right: 1rem;
+  text-align: right;
   border: 0;
   outline: none;
   cursor: pointer;
